# MATseq

./: .gitignore  MATseq.py  MATseq.sh  MATseq_environment.yml  MLPC visualisation.ipynb  README.md  config.yml  f  genomescan_works.yml  pyproject.toml  run.sh
experiment/: exp_settings.xlsx
notebooks/: 1_data_processing.ipynb  20230715 param_tuning.ipynb  20230730 MLPC with double pyrogen samples.ipynb  20230824 data prep for NN.ipynb  20230828 small NN.ipynb  20230829 NN with Wandb.ipynb  20230831 NN third sweep.ipynb  20230831 Small trained NN.ipynb  20230831 nn third sweep.ipynb  20230907 comparison with MLPC.ipynb  20230911 feature selection.ipynb  20230915 binary classifiers.ipynb  20230919 bagging classifier on double pyrogens.ipynb  20230919 voting classifier.ipynb  20230921 DESeq2 analysis.ipynb  20231025_PCA&first_run_mlpc.ipynb  20231025_PCA_of_multiple_conditions.ipynb  20231025_feature_importance_wt_rforest.ipynb  20231106_NN_fifth_sweep.ipynb  20231106_comparison_mlpc_nn_xgb.ipynb  20231123_predictions_per_class.ipynb  20240612_deseq2.ipynb  240122_data_preparation.ipynb  240221_data_prep_new_counts.ipynb  240225_ML_model_comparison.ipynb  240228_ML_predictions.ipynb  240228_benchmarking.ipynb  240313_ML_predictions.ipynb  240318_protein_expression.ipynb  240402_ANOVA, pears corr.ipynb  250314_models_run.ipynb  250314_venn_diagram.ipynb  250315_concat_De_sign.ipynb  250605_model_run_on_other_tlrs.ipynb  250625_predict_bacterial_samples.ipynb  2_supplementary_data_visualisation.ipynb  MATseq_NN_multiclass_classifier.keras  MATseq_old.py  (+4 more)
pipeline/: run.sh  (+1 more)
(+1645 files in other folders)
