[tool.poetry]
name = "mat-seq"
version = "0.1.0"
description = "MAT-seq RNA sequencing analysis pipeline"
authors = ["Tess Afanasyeva t.afanasyeva@sanquin.nl"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "src"}]
repository = "https://github.com/sqn-bioinformatics/MATseq"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = ">=1.3.0,<1.7.0"
scipy = "^1.11.0"
xgboost = "^2.0.0"
imbalanced-learn = "^0.12.0"
feature-engine = "^1.6.0"
adjusttext = "^0.8"
tqdm = "^4.66.0"

# Notebook support
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
notebook = "^7.0.0"

# Differential Expression Analysis
goatools = {version = "^1.3.0"}
pydeseq2 = {version = "^0.4.0"}
scanpy = {version = "^1.9.0"}
anndata = {version = "^0.10.0"}

# Visualization
matplotlib-venn = "^0.11.9"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
